migrating to Java 25