@@ -26,11 +26,9 @@ WORKDIR /app
 ENTRYPOINT ["/init"]
 CMD ["s6-setuidgid", "medlna", \
     "java", \
-    "--enable-preview", \
     "-XX:MaxRAMPercentage=70", \
     "-XX:+UseShenandoahGC", \
-    "-XX:+UnlockExperimentalVMOptions", \
-    "-XX:ShenandoahUncommitDelay=5000", \
-    "-XX:ShenandoahGuaranteedGCInterval=20000", \
+    "-XX:+UseCompactObjectHeaders", \
+    "-XX:ShenandoahGCMode=generational", \
     "-jar", \
     "mediatheken-dlna-bridge.jar"]
